# PowerBoard-Firmware

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
front/website/: index.html
lib/: max17330.c  max17330.h
main/: CMakeLists.txt  http_server.c  idf_component.yml  main.c  main.h  power_control.c  power_control.h
